fix-delete